--- a/about.html
+++ b/about.html
@@ -167,11 +167,10 @@ End Fixed Navigation
 				<p></p>
 				<p>Bonjour,</p>
 				<p>Je réalise les prises de vue aériennes par drone des toitures (maison individuelle, bâtiment, site industriel) pour les particuliers, les entreprises et les experts d’assurances, sur le secteur de La Rochelle et alentours.</p>
-				<p>Les prises de vue en haute-définition sont réalisées avec un drone de moins de 800grammes , ce qui ne nécessite pas d’autorisation préfectorale préalable et optimise drastiquement les délais d’intervention.</p>
 				<p>Le drone utilisé pour les prises de vue est le DJI MINI 3 PRO. Un drone haut de gamme qui prend des photos en 48 millions de pixel et qui filme jusqu’en 4K.</p>
-				<p>N’hésitez pas à me contacter via le formulaire de contact ici(lien vers le formulaire) en cas de besoin.</p>
+				<p>N’hésitez pas à me contacter si vous avez la moindre question. Mes coordonnées sont disponibles dans la rubrique <a href="contact.html">contact</a>.</p>
 			</div>
-			<div class="col-lg-6 mt-4 mt-lg-0">
+			<div class="col-lg-6 mt-4 mt-lg-0 d-flex">
 				<img loading="lazy" class="img-fluid" src="images/company/company-image.jpg" alt="">
 			</div>
 		</div>
@@ -251,8 +250,12 @@ Start Call To Action
     <div class="container">
       <div class="row justify-content-around">
         <div class="col-lg-4 col-md-6 mb-5 mb-lg-0">
-          <h3>A PROPOS</h3>
-          <p>KEVIN GAUDIN<br />Dirigeant de DroneService17 et Télépilote certifié</p>
+          <ul>
+            <li>
+              <h3>A PROPOS</h3>
+            </li>
+            <li><a href="about.html">KEVIN GAUDIN<br />Dirigeant de DroneService17 et Télépilote certifié</a></li>
+          </ul>
         </div>
         <!-- End of .col-sm-3 -->
 
