--- a/contact.html
+++ b/contact.html
@@ -174,12 +174,12 @@ End Fixed Navigation
 		</div>
  		<div class="row justify-content-center">
  			<!-- Contact Details -->
- 			<div class="contact-details col-md-6 ">
- 				<!-- <h3 class="mb-3">Contact</h3>
- 				<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam, vero, provident, eum eligendi blanditiis ex
+			<div class="contact-details col-md-6 ">
+ 				<!-- <h3 class="mb-3">Contact</h3> -->
+ 				<!-- <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsam, vero, provident, eum eligendi blanditiis ex
  					explicabo vitae nostrum facilis asperiores dolorem illo officiis ratione vel fugiat dicta laboriosam labore
  					adipisci.</p> -->
-        <img loading="lazy" src="images/drone-service.jpg" class="img-fluid" alt="">
+				<img loading="lazy" src="images/drone-service.jpg" class="img-fluid" alt="">
  				<ul class="contact-short-info mt-4">
  					<!-- <li class="mb-3">
  						<i class="tf-ion-ios-home"></i>
@@ -254,8 +254,12 @@ End Fixed Navigation
     <div class="container">
       <div class="row justify-content-around">
         <div class="col-lg-4 col-md-6 mb-5 mb-lg-0">
-          <h3>A PROPOS</h3>
-          <p>KEVIN GAUDIN<br />Dirigeant de DroneService17 et Télépilote certifié</p>
+          <ul>
+            <li>
+              <h3>A PROPOS</h3>
+            </li>
+            <li><a href="about.html">KEVIN GAUDIN<br />Dirigeant de DroneService17 et Télépilote certifié</a></li>
+          </ul>
         </div>
         <!-- End of .col-sm-3 -->
 
