--- a/index.html
+++ b/index.html
@@ -191,27 +191,27 @@ Start About Section
         <div class="row text-center">
           <div class="service-container col-md-6 col-sm-6">
             <div class="service-item">
-              <i class="tf-ion-ios-alarm-outline"></i>
+              <i class="tf-ion-pinpoint fix-position"></i>
               <h4>Contrôle préventif de l’état d’une toiture</h4>
               <p>Exemple: contrôle annuel de l’état structurel de la toiture, détection préventive de risques d’infiltration (tuile déplacée)</p>
             </div>
           </div><!-- END COL -->
           <div class="service-container col-md-6 col-sm-6">
             <div class="service-item">
-              <i class="tf-ion-ios-briefcase-outline"></i>
+              <i class="tf-ion-qr-scanner"></i>
               <h4>Inspection d’une toiture après sinistre</h4>
               <p>Tempête, dégât des eaux, grands vents, etc.…</p>
             </div>
           </div><!-- END COL -->
           <div class="service-container col-md-6 col-sm-6">
             <div class="service-item">
-              <i class="tf-ion-ios-email-outline"></i>
+              <i class="tf-ion-arrow-swap"></i>
               <h4>Expertise / contre-expertise</h4>
             </div>
           </div><!-- END COL -->
           <div class="service-container col-md-6 col-sm-6">
             <div class="service-item">
-              <i class="tf-ion-ionic"></i>
+              <i class="tf-ion-arrow-graph-up-right"></i>
               <h4>Estimation immobilière</h4>
               <p>Vente / contrat d’assurance</p>
             </div>
@@ -281,8 +281,12 @@ Start Call To Action
     <div class="container">
       <div class="row justify-content-around">
         <div class="col-lg-4 col-md-6 mb-5 mb-lg-0">
-          <h3>A PROPOS</h3>
-          <p>KEVIN GAUDIN<br />Dirigeant de DroneService17 et Télépilote certifié</p>
+          <ul>
+            <li>
+              <h3>A PROPOS</h3>
+            </li>
+            <li><a href="about.html">KEVIN GAUDIN<br />Dirigeant de DroneService17 et Télépilote certifié</a></li>
+          </ul>
         </div>
         <!-- End of .col-sm-3 -->
 
