--- a/pricing.html
+++ b/pricing.html
@@ -181,9 +181,11 @@ End Fixed Navigation
 					<!-- plan name & value -->
 					<div class="price-title">
 						<h3>Prises de vue aériennes de votre toiture</h3>
-						<strong class="value"><s>94€</s> 68€*</strong><br><small class="value-info">(promotion en cours)</small>
+						<strong class="value"><s>94€</s> 68€*</strong>
+						<!-- <strong class="value"><s>94€</s> 68€*</strong><br><small class="value-info">(promotion en cours)</small> -->
 						<p class="details"><i class="tf-ion-ios-arrow-forward"></i> Nous nous déplaçons à domicile et réalisons, à l’aide d’un drone, des photos haute-définition (48Mpx) de toute la toiture (couverture, faitage, réseau d'évacuation, rivage,etc...).</p>
 						<p class="details"><i class="tf-ion-ios-arrow-forward"></i> Toutes les photos vous sont ensuite envoyées par mail via un lien de téléchargement, dans un délai maximum de 24heures.</p>
+						<small class="value-info">* Tarif promotionnel en cours, valable dans un rayon de 17km autour de la commune d'Aytré.<br>(Intervention au delà de ce rayon tout à fait possible. Nous contacter pour un devis)</small>
 					</div>
 					<!-- /plan name & value -->
 
@@ -209,7 +211,7 @@ End Fixed Navigation
 					<!-- plan name & value -->
 					<div class="price-title">
 						<h3>Analyse des clichés par un couvreur partenaire</h3>
-						<strong class="value">35€</strong><small class="value-info"></small>
+						<strong class="value">31€</strong>
 						<p class="details"><i class="tf-ion-ios-arrow-forward"></i> Nous transmettons les clichés réalisés à l'un de nos couvreurs partenaires afin qu'il puisse identifier, s'il y a lieu, les éventuelles pathologies apparentes ( zone d'infiltration, fissures, obstruction du réseau d'évacuation, problème structurel ).</p>
 						<p class="details">Nous vous transmettons ensuite ses observations par mail, dans un délai rapide.</p>
 					</div>
@@ -241,7 +243,7 @@ End Fixed Navigation
 					<!-- plan name & value -->
 					<div class="price-title">
 						<h3>Mise en relation avec un couvreur partenaire</h3>
-						<strong class="value">Offert</strong><small class="value-info"></small>
+						<strong class="value">Offert</strong>
 						<p class="details"><i class="tf-ion-ios-arrow-forward"></i> Si vous souhaitez faire réaliser des travaux , nous pouvons vous mettre en relation avec l’un de nos couvreurs partenaires.</p>
 					</div>
 					<!-- /plan name & value -->
@@ -319,8 +321,12 @@ End Fixed Navigation
     <div class="container">
       <div class="row justify-content-around">
         <div class="col-lg-4 col-md-6 mb-5 mb-lg-0">
-          <h3>A PROPOS</h3>
-          <p>KEVIN GAUDIN<br />Dirigeant de DroneService17 et Télépilote certifié</p>
+          <ul>
+            <li>
+              <h3>A PROPOS</h3>
+            </li>
+            <li><a href="about.html">KEVIN GAUDIN<br />Dirigeant de DroneService17 et Télépilote certifié</a></li>
+          </ul>
         </div>
         <!-- End of .col-sm-3 -->
 
