fix: point to anchor in pricing page

--- a/pricing.html
+++ b/pricing.html
@@ -161,7 +161,7 @@ End Fixed Navigation
 <!-- Start Pricing section
 		=========================================== -->
 <section class="pricing-table" id="pricing">
-	<div class="container">
+	<div class="container" id="inspection-de-toiture">
 		<div class="row justify-content-center">
 			<!-- section title -->
 			<div class="col-xl-6 col-lg-8">
@@ -270,7 +270,7 @@ End Fixed Navigation
 
 		</div> <!-- End row -->
 	</div> <!-- End container -->
-	<div class="container">
+	<div class="container" id="prise-de-vue-toiture">
 		<div class="row justify-content-center">
 			<!-- section title -->
 			<div class="col-xl-6 col-lg-8">
@@ -335,8 +335,8 @@ End Fixed Navigation
             <li>
               <h3>NOS SERVICES & TARIFS</h3>
             </li>
-            <li><a href="pricing.html">Inspection de toiture pour les particuliers</a></li>
-            <li><a href="pricing.html">Prises de vue toiture pour les professionnels</a></li>
+            <li><a href="pricing.html#inspection-de-toiture">Inspection de toiture pour les particuliers</a></li>
+            <li><a href="pricing.html#prise-de-vue-toiture">Prises de vue toiture pour les professionnels</a></li>
           </ul>
         </div>
         <!-- End of .col-sm-3 -->
