--- a/contact.html
+++ b/contact.html
@@ -268,8 +268,8 @@ End Fixed Navigation
             <li>
               <h3>NOS SERVICES & TARIFS</h3>
             </li>
-            <li><a href="pricing.html">Inspection de toiture pour les particuliers</a></li>
-            <li><a href="pricing.html">Prises de vue toiture pour les professionnels</a></li>
+            <li><a href="pricing.html#inspection-de-toiture">Inspection de toiture pour les particuliers</a></li>
+            <li><a href="pricing.html#prise-de-vue-toiture">Prises de vue toiture pour les professionnels</a></li>
           </ul>
         </div>
         <!-- End of .col-sm-3 -->
