fix: missing anchors in index page

--- a/index.html
+++ b/index.html
@@ -295,8 +295,8 @@ Start Call To Action
             <li>
               <h3>NOS SERVICES & TARIFS</h3>
             </li>
-            <li><a href="pricing.html">Inspection de toiture pour les particuliers</a></li>
-            <li><a href="pricing.html">Prises de vue toiture pour les professionnels</a></li>
+            <li><a href="pricing.html#inspection-de-toiture">Inspection de toiture pour les particuliers</a></li>
+            <li><a href="pricing.html#prise-de-vue-toiture">Prises de vue toiture pour les professionnels</a></li>
           </ul>
         </div>
         <!-- End of .col-sm-3 -->
