--- a/contact.html
+++ b/contact.html
@@ -172,7 +172,7 @@ End Fixed Navigation
 			</div>
 			<!-- /section title -->
 		</div>
- 		<div class="row justify-content-center">
+ 		<div class="row">
  			<!-- Contact Details -->
 			<div class="contact-details col-md-6 ">
  				<!-- <h3 class="mb-3">Contact</h3> -->
@@ -212,29 +212,29 @@ End Fixed Navigation
  			<!-- / End Contact Details -->
 
  			<!-- Contact Form -->
- 			<!-- <div class="contact-form col-md-6 ">
- 				<form id="contact-form" method="post" role="form">
- 					<div class="form-group mb-4">
- 						<input type="text" placeholder="Ton nom" class="form-control" name="name" id="name" required>
- 					</div>
+ 			<div class="contact-form col-md-6 ">
+				<form id="contact-form" method="post" role="form">
+					<div class="form-group mb-4">
+						<input type="text" placeholder="Votre nom" class="form-control" name="name" id="name" required>
+					</div>
 
- 					<div class="form-group mb-4">
- 						<input type="email" placeholder="Ton email" class="form-control" name="email" id="email" required>
- 					</div>
+					<div class="form-group mb-4">
+						<input type="email" placeholder="Votre email" class="form-control" name="email" id="email" required>
+					</div>
 
- 					<div class="form-group mb-4">
- 						<input type="text" placeholder="Sujet" class="form-control" name="subject" id="subject" required>
- 					</div>
+					<div class="form-group mb-4">
+						<input type="text" placeholder="Le sujet du message" class="form-control" name="subject" id="subject" required>
+					</div>
 
- 					<div class="form-group mb-4">
- 						<textarea rows="6" placeholder="Message" class="form-control" name="message" id="message" required></textarea>
- 					</div>
- 					<div id="cf-submit">
- 						<input type="submit" id="contact-submit" class="btn btn-transparent" value="Envoyer">
- 					</div>
-
- 				</form>
- 			</div> -->
+					<div class="form-group mb-4">
+						<textarea rows="6" placeholder="Le message" class="form-control" name="message" id="message" required></textarea>
+					</div>
+					<div id="cf-submit">
+						<input type="submit" id="contact-submit" class="btn btn-transparent" value="Envoyer">
+					</div>
+				 <div id="form-message" style="margin-top: 10px; display: none;"></div>
+				</form>
+			</div>
  			<!-- ./End Contact Form -->
 
  		</div> <!-- end row -->
